--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # Install any necessary dependencies here, if needed
+        # Example: pip install -r requirements.txt
 
     - name: Run Tests
       run: |
-        pytest
-
+        # Run your tests here
+        # Example: pytest
