--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,13 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        # Install any necessary dependencies here, if needed
-        # Example: pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Adjust this line based on your project's dependencies
+
+    - name: Install pytest
+      run: |
+        pip install pytest
 
     - name: Run Tests
       run: |
-        # Run your tests here
-        # Example: pytest tests/
         pytest ex1_test.py
